// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pageBreakAfter renders 0 1`] = `
Array [
  .c0 {
  page-break-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders function 1`] = `
Array [
  .c0 {
  page-break-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: has;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: has;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders invalid theme path 1`] = `
Array [
  .c0 {
  page-break-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders negative number 1`] = `
Array [
  .c0 {
  page-break-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    page-break-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    page-break-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-after: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-after: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    page-break-after: July;
  }
}

@media April {
  .c0 {
    page-break-after: August;
  }
}

@media January {
  .c0 {
    page-break-after: September;
  }
}

@media April {
  .c0 {
    page-break-after: November;
  }
}

@media June {
  .c0 {
    page-break-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    page-break-after: July;
  }
}

@media April {
  .c0 {
    page-break-after: August;
  }
}

@media January {
  .c0 {
    page-break-after: September;
  }
}

@media April {
  .c0 {
    page-break-after: November;
  }
}

@media June {
  .c0 {
    page-break-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-after: January;
  }
}

@media April {
  .c0 {
    page-break-after: December;
  }
}

@media January {
  .c0 {
    page-break-after: April;
  }
}

@media April {
  .c0 {
    page-break-after: May;
  }
}

@media June {
  .c0 {
    page-break-after: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-after: January;
  }
}

@media April {
  .c0 {
    page-break-after: December;
  }
}

@media January {
  .c0 {
    page-break-after: April;
  }
}

@media April {
  .c0 {
    page-break-after: May;
  }
}

@media June {
  .c0 {
    page-break-after: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders postitive number 1`] = `
Array [
  .c0 {
  page-break-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders string 1`] = `
Array [
  .c0 {
  page-break-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: June;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: June;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakAfter renders valid theme path 1`] = `
Array [
  .c0 {
  page-break-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
